--- a/yeastmine.properties
+++ b/yeastmine.properties
@@ -6,10 +6,10 @@
 # database properties #
 db.sgd.datasource.class=org.postgresql.ds.PGPoolingDataSource
 db.sgd.datasource.dataSourceName=db.sgd
-db.sgd.datasource.serverName=SGD_PGHOST
+db.sgd.datasource.serverName=SGD_HOST
 db.sgd.datasource.databaseName=sgd
-db.sgd.datasource.user=SGD_PSQL_USER
-db.sgd.datasource.password=SGD_PSQL_PWD
+db.sgd.datasource.user=SGD_USER
+db.sgd.datasource.password=SGD_PWD
 db.sgd.datasource.maxConnections=10
 db.sgd.driver=org.postgresql.Driver
 db.sgd.datasource.portNumber=5432
